processed/gerrit/txt/54834.txt
Change:     54834
Subject:    LU-17504 build: fix gcc-13 [-Werror=stringop-overread] error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/54834
Change-Id:  I59f5a88b4cd64c9f4e67e568546baada371543b1
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-04-17 22:44:53.000000000
Updated:    2024-05-06 03:51:22.000000000
Patch Set:  6
Insertions: +55
Deletions:  -66
Comments:   22 (3 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Shaun Tancheff: +1; Andreas Dilger: +1; Oleg Drokin: +2; Jian Yu: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Jian Yu, Yang Sheng, Shaun Tancheff

--- Commit Message ---
LU-17504 build: fix gcc-13 [-Werror=stringop-overread] error

This patch fixes the following [-Werror=stringop-overread] and
[-Werror=attribute-warning] errors detected by gcc 13:

lustre/mgc/mgc_request.c:190:21: error: 'strcmp' reading 1 or
more bytes from a region of size 0 [-Werror=stringop-overread]
  190 | if (strcmp(logname, cld->cld_logname) == 0) {
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In function 'fortify_memcpy_chk',
    inlined from 'class_handle_ioctl' at
/root/lustre-release/lustre/obdclass/class_obd.c:381:3:
include/linux/fortify-string.h:528:25: error:
call to '__write_overflow_field' declared with attribute warning:
detected write beyond size of field (1st parameter);
maybe use struct_group()? [-Werror=attribute-warning]
  528 |  __write_overflow_field(p_size_field, size);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I59f5a88b4cd64c9f4e67e568546baada371543b1
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/54834
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-04-17 22:44:53.000000000) ---
Uploaded patch set 1.

--- Message (jenkins, 2024-04-17 23:10:56.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104245/ : SUCCESS

--- Message (Jian Yu, 2024-04-19 00:02:46.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2024-04-19 00:31:10.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104265/ : SUCCESS

--- Message (Jian Yu, 2024-04-19 15:55:14.000000000) ---
Patch Set 2:

Test sessions failed with DCO-9653.

--- Message (Autotest, 2024-04-22 22:43:04.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-3 session on el9.3-x86_64/ldiskfs servers and clients for build 104265 patch 2. Requested by jianyu because of LU-17331.

--- Message (Shaun Tancheff, 2024-04-23 11:21:48.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Jian Yu, 2024-04-23 17:43:00.000000000) ---
Uploaded patch set 3.

--- Message (Jian Yu, 2024-04-23 17:43:22.000000000) ---
Patch Set 3:

(1 comment)

--- Message (jenkins, 2024-04-23 18:08:02.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104327/ : SUCCESS

--- Message (Autotest, 2024-04-24 03:08:13.000000000) ---
Patch Set 3:

Onyx Autotest 2 retesting non-enforced review-dne-part-9 session on el9.3-x86_64/ldiskfs servers and clients for build 104327 patch 3. Requested by jianyu because of LU-17377.

--- Message (Autotest, 2024-04-24 03:09:35.000000000) ---
Patch Set 3:

Trevis Autotest 2 retesting enforced review-ldiskfs session on el8.9-x86_64/ldiskfs servers and clients for build 104327 patch 3. Requested by jianyu because of LU-17771.

--- Message (Yang Sheng, 2024-04-24 14:01:04.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Andreas Dilger, 2024-04-24 22:01:38.000000000) ---
Patch Set 3: Code-Review-1

(5 comments)

--- Message (Andreas Dilger, 2024-04-24 22:38:27.000000000) ---
Patch Set 3:

(5 comments)

--- Message (Shaun Tancheff, 2024-04-25 18:16:14.000000000) ---
Patch Set 3:

(1 comment)

Seems there are few other issues ... most of it boils down to changing from zero-length arrays [0] to flexible arrays [].

--- Message (Shaun Tancheff, 2024-04-25 18:18:08.000000000) ---
Uploaded patch set 4.

--- Message (Jian Yu, 2024-04-25 18:30:23.000000000) ---
Patch Set 4:

(1 comment)

Thank you Shaun for updating this patch.

--- Message (Andreas Dilger, 2024-04-25 18:48:28.000000000) ---
Patch Set 4: Code-Review+1

Looks much better, thanks

--- Message (jenkins, 2024-04-25 18:58:19.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104396/ : SUCCESS

--- Message (Jian Yu, 2024-04-25 20:17:16.000000000) ---
Patch Set 4: Verified+1 Code-Review+1

--- Message (James Simmons, 2024-04-25 20:23:37.000000000) ---
Patch Set 4:

(2 comments)

--- Message (Jian Yu, 2024-04-25 20:58:07.000000000) ---
Patch Set 4:

> Patch Set 4:
> 
> (2 comments)

Hi James, the above two issues were resolved in patch set 4.

--- Message (wc-checkpatch, 2024-04-25 21:19:24.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (Autotest, 2024-04-26 00:08:52.000000000) ---
Patch Set 4:

Trevis Autotest 2 retesting enforced review-dne-part-2 session on el9.3-x86_64/ldiskfs servers and clients for build 104396 patch 4. Requested by jianyu because of LU-17780.

--- Message (Shaun Tancheff, 2024-04-26 02:59:06.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Andreas Dilger, 2024-04-26 03:01:25.000000000) ---
Patch Set 4:

(1 comment)

--- Message (Shaun Tancheff, 2024-04-26 05:21:18.000000000) ---
Patch Set 4:

(1 comment)

--- Message (Andreas Dilger, 2024-04-26 05:53:05.000000000) ---
Patch Set 4:

(1 comment)

--- Message (Shaun Tancheff, 2024-04-26 15:56:12.000000000) ---
Uploaded patch set 5: Patch Set 4 was rebased.

--- Message (wc-checkpatch, 2024-04-26 16:00:19.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (jenkins, 2024-04-26 23:44:09.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/104454/ : SUCCESS

--- Message (James Simmons, 2024-04-27 12:17:43.000000000) ---
Patch Set 5: Code-Review+1

--- Message (Oleg Drokin, 2024-04-30 06:58:37.000000000) ---
Patch Set 5: Code-Review+2

--- Message (Oleg Drokin, 2024-04-30 06:58:41.000000000) ---
Change has been successfully cherry-picked as 718e3f3e680f422d865a15890ac60e66dcd9e240 by Oleg Drokin

--- Message (Shaun Tancheff, 2024-05-06 03:51:22.000000000) ---
Patch Set 6:

(2 comments)

Needs coverity cleanup.
